crates/vexor-compiler/tests/golden/error/output/match_empty.err
Error: parse error
   ╭─[ input:3:24 ]
   │
 3 │ val result = match r { }
   │                        ┬  
   │                        ╰── invalid match arm
───╯
